[package]
name = "reducer"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to translate files by templates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.5"
