[package]
name = "rapper"
version = "0.1.2"
edition = "2021"
description = "A CLI tool to translate files by templates"
keywords = ["cli"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zzhack-stack/reducer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.5"
